# tracking-physics

./: .gitignore  CMakeLists.txt  README.md  analysis.sh  clean.sh  cube.pcd  cube.txt  main.cpp  pcl_tracking.cpp  pcl_tracking.hpp  setup.sh  tracking_example.cpp
Results/: csv1.csv
analysis/: analysis.py  camera-res.py  guess-exp1-suzanne.txt  guess-exp1-utah.txt  guess-exp2-utah.txt  guess-exp3-suzanne.txt  guess.txt  parameter-analysis.py  pareto-fronts.py  rotations.txt  timing.py  truth-exp1-utah.txt  truth-exp2-utah.txt  truth.txt
analysis/experiment-full/: acceleration-1.txt  acceleration-10.txt  acceleration-100.txt  acceleration-11.txt  acceleration-12.txt  acceleration-2.txt  acceleration-3.txt  acceleration-4.txt  acceleration-45.txt  acceleration-5.txt  acceleration-6.txt  acceleration-7.txt  acceleration-8.txt  acceleration-9.txt  guess-1-1-1.txt  guess-1-playback.txt  movexy-42.txt  movexy-43.txt  movexy-45.txt  res1-1.txt  res1-2.txt  res1-3.txt  res1-4.txt  res1-5.txt  res1-timing-1.txt  res1-timing-2.txt  res1-timing-3.txt  res1-timing-4.txt  res1-timing-5.txt  res1-timing.txt  res1.txt  res2-1.txt  (+109 more)
data/: frame_0.pcd  frame_100.pcd  frame_101.pcd  frame_102.pcd  frame_103.pcd  frame_104.pcd  frame_105.pcd  frame_106.pcd  frame_107.pcd  frame_108.pcd  frame_109.pcd  frame_110.pcd  frame_111.pcd  frame_112.pcd  frame_113.pcd  frame_114.pcd  frame_115.pcd  frame_116.pcd  frame_117.pcd  frame_118.pcd  frame_119.pcd  frame_120.pcd  frame_121.pcd  frame_122.pcd  frame_123.pcd  frame_124.pcd  frame_125.pcd  frame_126.pcd  frame_127.pcd  frame_128.pcd  frame_129.pcd  frame_130.pcd  frame_131.pcd  frame_132.pcd  frame_133.pcd  frame_134.pcd  frame_135.pcd  frame_136.pcd  frame_137.pcd  frame_138.pcd  (+110 more)
examples/: load_cloud.cpp  pcd_write.cpp  tracking_example.cpp
kilian/: main.cpp  pointcloud_tracking.cpp  pointcloud_tracking.hpp
results/: csv2.csv  results.py  timetest.csv
scripts/: analysis.sh
src/: imu.cpp  imu.hpp  main.cpp  pcl_tracking.cpp  pcl_tracking.hpp
tests/: suzanne-1000.txt  suzanne-1500.txt  suzanne-2000.txt  suzanne-4000.txt  suzanne-8000.txt  suzanne-test.txt  suzanne.pcd  suzanne1500.pcd  suzanne2000.pcd  suzanne7-2000.pcd  suzanne7.txt
translation/: frame_111.pcd  frame_118.pcd  frame_124.pcd  frame_132.pcd  frame_137.pcd  frame_146.pcd  frame_149.pcd  frame_152.pcd  frame_154.pcd  frame_155.pcd  frame_157.pcd  frame_158.pcd  frame_159.pcd  frame_160.pcd  frame_161.pcd  frame_162.pcd  frame_163.pcd  frame_164.pcd  frame_165.pcd  frame_166.pcd  frame_167.pcd  frame_168.pcd  frame_169.pcd  frame_170.pcd  frame_171.pcd  frame_172.pcd  frame_173.pcd  frame_174.pcd  frame_175.pcd  frame_176.pcd  frame_177.pcd  frame_178.pcd  frame_179.pcd  frame_180.pcd  frame_181.pcd  frame_182.pcd  frame_183.pcd  frame_184.pcd  frame_185.pcd  frame_186.pcd  (+812 more)
(+5222 files in other folders)
